# kp

./: .gitignore  CMakeLists.txt  vcpkg.json
Resources/configs/: ui.ini
Sources/: Client.cpp  Client.h  DatePicker.cpp  DatePicker.h  LoginWindow.cpp  LoginWindow.h  MainView.cpp  MainView.h  Roles.h  TableType.h  TablesView.cpp  TablesView.h  main.cpp  main.h
Sources/SGE/: FileCreateDialog.cpp  FileCreateDialog.h  ImGuiUtils.cpp  ImGuiUtils.h  TopToolbarView.cpp  TopToolbarView.h  Window.cpp
Sources/Styles/: IStyle.cpp  IStyle.h
Sources/Styles/Editor/: Dark.cpp
Sources/Update/: TableUpdateType.h  UpdateItemTypeInfoWindow.cpp  UpdateItemTypeInfoWindow.h  UpdateItemWindow.cpp  UpdateItemWindow.h  UpdateOffWindow.cpp  UpdateOffWindow.h  UpdateOrderWindow.cpp  UpdateOrderWindow.h  UpdateProviderWindow.cpp  UpdateProviderWindow.h  UpdateRecordWindow.cpp  UpdateRecordWindow.h  UpdateShipmentWindow.cpp  UpdateShipmentWindow.h  UpdateStorageWindow.cpp  UpdateStorageWindow.h  UpdateWorkerWindow.cpp  UpdateWorkerWindow.h
cmake/: include_as_plugin.cmake
common/: Introspection.h  SerdeSpecs.h  WorkerRole.h
common/Models/: Item.h  ItemTypeInfo.h  Offs.h  Order.h  Provider.h  Shipment.h  Storage.h  Worker.h
common/Reflection/: GetTypeName.h  MemberFunction.h  Reflection.cpp  Reflection.h
server/: CMakeLists.txt  Controller.h  Utils.h  main.cpp
server/Controllers/: Common.h  ItemController.h  ItemTypeInfoController.h  OffsController.h  OrdersController.h  ProvidersController.h  ShipmentsController.h  StaffController.h  StoragesController.h
